src/styles/_rest.scss
/* ... */
.gateway-route-header-column {
  @extend .gateway-route-header;
  margin: 0;
  padding: 0;
  color: $inactive-text-color;
}

.gateway-route-sparklines {
  padding-top: 2rem;
}

.gateway-route-name {
  @extend .deployment-cluster-name;
  padding-top: 4.6rem;

  span {
    font-size: $font-size-large !important;
  }
}

.gateway-route-weight {
  padding-top: 4.6rem;
}

.gateway-route-condition {
  padding: 2.6rem 0 0 0;
  margin: 0;

  .label {
    text-overflow: ellipsis;
    max-width: 26rem;
    overflow: hidden;
    display: inline-block
  }
}

// deployment
.deployment {
  @extend .gateway;
}

.deployment-charts {
  @extend .gateway-charts;
}

.deployment-chart-column {
  text-align: center;
  padding: 2rem 0;
  & > p {
    margin-bottom: 2rem;
  }
}

.deployment-cluster {
  margin-top: 2rem;
  overflow: hidden;
}

.deployment-cluster-name {
  span {
    font-size: $font-size-large !important;
    font-weight: $font-weight-light;
    color: $text-color;
    margin: 1rem;

    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }

  overflow: hidden;
}

.deployment-cluster-service-row {
  @extend .gateway-route-row;
  border-radius: 5px;

  margin-top: .2rem;
  margin-left: 2rem;
  margin-right: 2rem;
}

.deployment-cluster-list {
  ul {
    list-style-type: none;
    padding: 0 0 0 1rem;
    text-align: left;
    font-weight: $font-weight-light;
    font-size: $font-size-normal;

    li:first-of-type {
      margin: 0 0 0 0;
    }

    li .title {
      background-color: transparent;
      text-transform: uppercase;
      font-size: $font-size-small !important;
      color: $inactive-text-color;
      font-weight: $font-weight-regular;
    }
  }
}

.modal-content {
  background-color: $background-color;
  border-radius: 2px;
  margin: 1rem;
  padding: 1rem;
}

.modal-header {
  font-size: $font-size-large;
  background-color: $background-color;
  border-bottom: 1px solid $text-color;
  text-transform: uppercase;
}

.modal-footer {
  background-color: $background-color;
  border-top: none;
}

.edit-scale {
  .note {
    margin: 1rem 4rem 2.5rem 0;
    span {
      letter-spacing: 1px;
      font-size: $font-size-normal;
      font-weight: $font-weight-light;
      background-color: rgba($pill-background-color, .2);
      color: inherit;
      border-radius: .3em;
    }
  }
  label {
    color: $inactive-text-color;
    text-transform: uppercase;
    font-size: $font-size-normal;
  }
  .form-control {
    border: 1px solid $outline-color;
  }
}

.deployment-selection {
  button {
    font-size: $font-size-normal !important;
    text-transform: none;
  }
}

snippet {
  .modal-header {
    border-bottom: none;
  }

  pre {
    color: $text-color;
    background: rgba($text-color, 0.1);
  }
}

.v-label {
  color: $inactive-text-color;
  font-size: $font-size-normal;
  text-transform: uppercase;
}

.v-value {
  color: $text-color;
  font-weight: 300 !important;

  &--state {
    &--highlight {
      @extend .highlight;
    }

    &--update {
      @extend .label-info;
      background-color: $warning-button-color !important;
      color: black !important;
    }

    &--error-alert {
      @extend .label-red-alert;
    }
  }
}

.v-action {
  margin-left: 5px;
  cursor: pointer;
}

.vamp-table {
  &__group {
    &:not(:first-of-type) {
      margin-top: 2rem;
    }

    &__name {
      margin-bottom: -2.2rem;
      font-size: $font-size-large;
    }
  }

  &__headers {
    width: 100%;
    display: flex;
  }

  &__row {
    width: 100%;
    display: flex;
    font-weight: 300;
    background-color: rgba($header-color, 0.2);
    border-radius: 5px;
    min-height: 10rem;
    margin-top: .2rem;
    font-size: $font-size-normal;

    align-items: center;

    .v-label {
      font-weight: $font-weight-light;
    }

    .v-value {

      &--emphasis {
        padding: .5rem 1rem;
        border-radius: 5px;
        font-size: $font-size-small;
        background-color: rgba($box-color, .2);
      }

      a {
        color: $hyperlink-text-color;
        padding-left: .6rem;
        font-size: $font-size-normal;

        &:before {
          content: "\f105";
          font-family: FontAwesome;
          left: -.5rem;
          position: absolute;
          top: 0.1rem;
        }
      }
    }

    &:hover {
      .name-col > .clickable {
        text-decoration: underline;
      }
    }
  }

  &__col {
    position: relative;
    &:first-of-type {
      padding-left: 2rem;
    }

    &--chart {
      position: relative;
      margin-top: .5rem;
      .v-value {
        display: block;
        position: absolute;
        margin-left: .5rem;
        margin-top: .2rem;
        font-weight: 500 !important;
        text-shadow: 1px 1px rgba(black, 0.3);
      }
    }

    &__list {
      display: inline-block;
      position: relative;

      &__action {
        position: absolute;
        left: 100%;
        top: 0;
        bottom: 0;
        margin-left: 2rem;
        padding-left: 1rem;
        display: flex;
        align-items: center;
        border-left: 1px solid $outline-color;
        color: $inactive-text-color;
        cursor: pointer;

        &:hover {
          color: $hover-text-color;
        }

      }
    }

    &__action {
      cursor: pointer;
      position: absolute;
      top: 0;
      bottom: 0;
      left: 11rem;
    }

  }
}

//For clusters
.cluster-table {
  .vamp-table__headers {
    .name-col,
    .instance-name-col {
      opacity: 0;
    }
  }

  .name-col {
    width: 30%;
    font-size: $font-size-large;

    .clickable {
      margin-right: 1.5rem;
    }
  }

  .instance-name-col {
    width: 80%;
  }

  .health-col {
    width: 15%;
  }

  .scale-col {
    width: 20%;
  }

  .instances-col {
    width: 20%;
  }

  .ports-col {
    width: 15%;
  }

  .env-col {
    width: 20%;
  }
}

.side-button-center {
  text-align: center;
}

.side-button {
  padding: 5px;
  color: $text-color;
  text-align: center;
}
/* ... */

